src/objects/QueueMap__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Maps the Email to the Queue Id.Used to map Cases to Queue based on Case Origin.</description>
    <fields>
        <fullName>AM_Queue_Name__c</fullName>
        <label>AM Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>QueueMap</label>
</CustomObject>